fix: spacing and console.log

--- a/styles.css
+++ b/styles.css
@@ -221,8 +221,6 @@ h2 {
   width: 85%; 
   max-width: 1000px; 
   text-align: center;
-  border-radius: 10px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 .modal-poster-img,
@@ -232,7 +230,6 @@ h2 {
   object-fit: cover; 
   border: 2px solid white;
   margin-bottom: 20px;
-  border-radius: 10px;
 }
 
 .modal-poster-title {
@@ -254,6 +251,6 @@ h2 {
   max-width: 1000px;
   margin: 0 auto;
   background-color: black;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
 }
+
+
